@@ -29,4 +29,4 @@ laf.tonicUseThickBorders=Use thick borders for Tabbed Pane
 
 laf.other=Other
 
-laf.lafPerformanceWarning=Also note: Some Look and Feels may cause performance problems. If you think your selected Look and Feel slows down SQuirreL switch to a Metal or Plastic Look and Feel. 
+laf.lafCriticalWarning=Also note: Some Look and Feels may cause performance or even functional problems. If you think you are seeing such problems switch to a Metal Look and Feel. 
